Fix format imports for Gradle/Maven